grace.interpreter/src/test/resources/shouldfail/t176_reservedClass_fail_test.grace
class self.newz {
    ...;
};
print(self);
